feat(common-agrona): reimplement UnsafeBufferEx over MemorySegment GLOBAL
Break UnsafeBufferEx's inheritance from Agrona's UnsafeBuffer and reimplement
the full AtomicBufferEx surface over java.lang.foreign.MemorySegment, dropping
the sun.misc.Unsafe/UnsafeApi dependency. Off-heap (native) instances access a
process-wide GLOBAL everything-segment at absolute addresses so the JIT elides
bounds checks (Unsafe-parity); heap-backed instances fall back to the bounded
per-instance segment. Each accessor inlines the GLOBAL receiver in its native
branch so the size-MAX bound stays a compile-time constant.

Add UnsafeBufferExTest (Enclosed + Parameterized) exercising every read/write
round-trip across heap array, heap/direct ByteBuffer, offset variants, heap
MemorySegment, and native Arena segment backings, with atomics on native
backings and implicit bounds checks on heap.

Add junit-vintage-engine so the module's JUnit4 tests are discovered under the
JUnit Platform provider (previously SafeBufferTest never ran).

Parameterize BufferBM over {unsafe, safe} so UnsafeBufferEx and SafeBuffer can
be compared to track convergence across JDK releases.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01VichVQdUSfJyKcYVvdT2yp